libs/pavex_macros/tests/constructor/fail/multiple_lifecycles.stderr
error: A constructor can't have multiple lifecycles. You can only specify *one* of `singleton`, `request_scoped`, or `transient`.
 --> tests/constructor/fail/multiple_lifecycles.rs:5:1
  |
5 | #[constructor(singleton, request_scoped)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `constructor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A constructor can't have multiple lifecycles. You can only specify *one* of `singleton`, `request_scoped`, or `transient`.
  --> tests/constructor/fail/multiple_lifecycles.rs:10:1
   |
10 | #[constructor(singleton, transient)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `constructor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A constructor can't have multiple lifecycles. You can only specify *one* of `singleton`, `request_scoped`, or `transient`.
  --> tests/constructor/fail/multiple_lifecycles.rs:15:1
   |
15 | #[constructor(singleton, request_scoped, transient)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `constructor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A constructor can't have multiple lifecycles. You can only specify *one* of `singleton`, `request_scoped`, or `transient`.
  --> tests/constructor/fail/multiple_lifecycles.rs:20:1
   |
20 | #[constructor(request_scoped, transient)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `constructor` (in Nightly builds, run with -Z macro-backtrace for more info)
